# gemini-batch

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: 20250713-rich-refresh.md  20250714-atomic-operations.md  README.md
examples/: README.md  basic.jsonl  show.py  structured-output.jsonl
examples/results/: README.md  basic.jsonl  show.py  structured-output.jsonl
gembatch/: README.md  __init__.md  __init__.py  batch_info.md  batch_info.py  cleanup.md  cleanup.py  main.md  main.py  poll.md  poll.py  submit.md  submit.py
